--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.3",
+    "autoprefixer": "^10.4.19",
     "nuxt": "^3.8.2",
+    "nuxt-icon": "^0.6.10",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "tailwind-typewriter": "^1.0.1"
   }
 }
