--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.3",
+    "@nuxtjs/color-mode": "^3.4.1",
+    "@nuxtjs/i18n": "^8.3.1",
     "autoprefixer": "^10.4.19",
     "nuxt": "^3.8.2",
     "nuxt-icon": "^0.6.10",
